--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
     python-telegram-bot==21.0
-    firebase-admin==6.1.0
-    pandas>=2.2.2  # Bu satırı değiştirdik
+    firebase-admin==6.5.0  # Bu satırı değiştirdik
+    pandas==1.5.3
     openpyxl==3.1.2
     python-dotenv==1.0.1
     google-generativeai==0.6.0
     gunicorn==22.0.0
     Flask==3.0.3
-    
