--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-python-telegram-bot==21.0
-firebase-admin==6.5.0
-openpyxl==3.1.2
-python-dotenv==1.0.1
-google-generativeai==0.6.0
-gunicorn==22.0.0
-Flask==3.0.3
-requests==2.32.3
+    python-telegram-bot==21.0
+    firebase-admin==6.5.0
+    openpyxl==3.1.2
+    python-dotenv==1.0.1
+    google-generativeai==0.6.0
+    requests==2.32.3
+    # gunicorn==22.0.0  # Bu satırı kaldırın
+    # Flask==3.0.3     # Bu satırı kaldırın
